--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,26 +1,24 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: VirtualBAW # Your GitHub organization or username, where this repository lives
+repo: status-page # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: VirtualBAW Frontend
+    url: https://virtualbaw.com
+  - name: VirtualBAW Support System
+    url: https://support.virtualbaw.com
+  - name: VirtualBAW Ventura Server
+    url: http://46.101.0.90
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.virtualbaw.com
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: VirtualBAW
+  introTitle: "Welcome to the status page for VirtualBAW"
+  introMessage: This page shows off the current status of the VirtualBAW services and any issues that may have happened recently.
   navbar:
     - title: Status
       href: /
