--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,18 +3,18 @@ owner: VirtualBAW # Your GitHub organization or username, where this repository 
 repo: status-page # The name of this repository
 
 sites:
-  - name: VirtualBAW Frontend
+  - name: Website Frontend
     url: https://virtualbaw.com
-  - name: VirtualBAW Support System
+  - name: Support System
     url: https://support.virtualbaw.com
-  - name: VirtualBAW Ventura Server
+  - name: Ventura Server
     url: http://46.101.0.90
+    
+assignees:
+  - xKaelyn
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.virtualbaw.com
-  # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: VirtualBAW
   introTitle: "Welcome to the status page for VirtualBAW"
